--- a/blogpost.html
+++ b/blogpost.html
@@ -12,12 +12,12 @@
             </div>
             <div id="post">
                     <h1>Este es el título atractivo e interesante del post</h1>
-                    <p>Y este es el p&aacute;rrafo de inicio donde vamos a explicar las cosas incre&aacute;bles que se pueden hacer con ramas.</p>  
+                    <p>Y este es el p&aacute;rrafo de inicio donde vamos a explicar las cosas incre&iacute;bles que se pueden hacer con ramas.</p>  
                     <p>
                         Los blogs son la mejor forma de compartir informacion y tus ideas.
-                        Mucho m&aacute;s que ir a conferencias o salir en YouTube. Excepto si eres un rockstar. Pero estadisticamente no lo eres... por ahora.
+                        Mucho m&aacute;s que ir a conferencias o salir en YouTube. Excepto si eres un rockstar. Pero estad&iacute;sticamente no lo eres... por ahora.
                     </p>
-                    <p>Suscr&aacute;bete y dale like.</p>
+                    <p>Suscr&iacute;bete y dale like.</p>
             </div>
             <div id="footer">
                 Hecho con amor en Platzi
